# safescan

./: .dockerignore  .env.production.example  .env.scanner  .gitattributes  .gitignore  Caddyfile  QUICKSTART.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  create_admin.py  migrate_verification_method.py  pyproject.toml  requirements.txt  set_admin.sql
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_user_settings.py  003_add_celery_task_id.py
backend/app/: gen_hash.py  main.py  reset_admin.py  test_admin.py  test_admin_http.py  test_approve.py  test_scan_create.py  test_yk_http.py  test_yk_socket.py  test_yookassa.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  api_keys.py  auth.py  billing.py  domains.py  reports.py  (+5 more)
backend/app/core/: api_key_auth.py  config.py  database.py  email.py  security.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  base.py  domain.py  notification.py  organization.py  scan.py  transaction.py  user.py  vulnerability.py
backend/app/schemas/: __init__.py  api_key.py  base.py  billing.py  domain.py  organization.py  report.py  scan.py  user.py  vulnerability.py
backend/app/scripts/: seed_admin.py
backend/app/services/: audit.py  domain_verification.py  report_generator.py  s3_storage.py
backend/app/workers/: celery_app.py  scan_logger.py  scanner.py  tasks.py
backend/app/workers/modules/: app_logic.py  auth_sessions.py  base.py  csrf_cors.py  info_leakage.py  injection.py  network.py  sca.py  security_headers.py  server_config.py  ssl_tls.py  ssrf_xxe_traversal.py  xss.py
backend/db/init/: 001_init.sql  002_fix_verification_method.sql
(+48 files in other folders)
